------------------------------------------------------------------------
r343 | gaser | 2010-06-25 09:12:42

M      cg_spm8_batch.m
M      cg_vbm8_batch.m

Modified call to spm defaults in cg_*_batch.m. 
------------------------------------------------------------------------
r344 | gaser | 2010-07-26 08:39:17

M       tbx_cfg_vbm8.m

Corrected a typo in tbx_cfg_vbm8.m.
------------------------------------------------------------------------
r345 | gaser | 2010-07-28 18:54:58

M       cg_vbm8_write.m
M       cg_ornlm.m

Added old noise estimation based on local statistics as alternative if
robust noise estimation will fail due to memory issues.
------------------------------------------------------------------------
r347 | gaser | 2010-08-03 10:21:54

M      afb3D.m
M      cg_vbm8_write.m
M      cg_ornlm.m

Noise estimation is now based on a maximum bounding box of 256x256x256. This
will save memory for images with larger dimensions. If this is not successful
noise is estimated in a even more limited bounding box.
------------------------------------------------------------------------
r348 | gaser | 2010-08-04 17:10:12

M      cg_vbm8_write.m

(1) Removed experimental atlas ROI calculation.
(2) Added *.mexw64 files to vbm8 website for manual download.
------------------------------------------------------------------------
r349 | gaser | 2010-08-05 10:07:24

M      tbx_cfg_vbm8.m

Removed some options for affine regularization to consider newest spm8 update
r4010.
------------------------------------------------------------------------
r350 | gaser | 2010-08-05 12:24:15

M      ornlmMex.mexw64
M      upfirdn2dMex.mexw64
M      AmapMex.mexw64

Mex-files for Windows 64-bit are now created with Visual C++ 2005 Professional
to solve issues with redistributable libraries (thanks to Guillaume Flandin
for help).
------------------------------------------------------------------------
r351 | gaser | 2010-08-09 09:27:40